--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -39,5 +39,5 @@ jobs:
       # - name: Terraform Apply
       #   run: terraform apply -auto-approve -var="iam_role_arn=${{ secrets.GLUE_ROLE_ARN }}"
 
-      - name: Terraform Delete
-        run: terraform delete
+      - name: Terraform Destroy
+        run: terraform destroy
