--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -11,6 +11,9 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        my-custom-input: ["Ankur", "Pandey", "Ankur Pandey"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -23,4 +26,5 @@ jobs:
       
       - name: Deploy
         run: |
+          echo ${{ matrix.my-custom-input }}
           aws s3 ls
