Adding a composite workflow 3

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -16,7 +16,7 @@ jobs:
         my-custom-input: ["Ankur", "Pandey", "Ankur Pandey"]
     steps:
       - name: Welcome
-        uses: ../composite/say-hello
+        uses: ./.github/composite/say-hello
         with:
           name: "Ankur"
           message: "Namaste"
