Adding a composite workflow 7

--- a/.github/composite/say-hello/action.yaml
+++ b/.github/composite/say-hello/action.yaml
@@ -9,7 +9,8 @@ inputs:
   message:
     description: This is the message we want to use to greet the user
     type: string
-    default: Hello
+    required: false
+    default: "Hello"
 
 runs:
   using: composite
