--- a/.github/composite/say-hello/action.yaml
+++ b/.github/composite/say-hello/action.yaml
@@ -21,5 +21,5 @@ runs:
       shell: bash
 
     - name: Say the greeting message
-      run: echo "{{ inputs.message }}! Welcome to the team, ${{ inputs.name }}"
+      run: echo "${{ inputs.message }}! Welcome to the team, ${{ inputs.name }}"
       shell: bash
