Add a reusable workflow

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -39,3 +39,11 @@ jobs:
         run: |
           echo ${{ matrix.my-custom-input }}
           aws s3 ls
+
+  wish-job:
+    name: Wish Job
+    uses: ./.github/workflows/reusable-workflow.yaml
+    with:
+      name: "Rajesh"
+      age: 50
+      message: "Kaisan bata? "
