--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        my-custom-input: ["Ankur", "Pandey", "Ankur Pandey"]
+        my-custom-input: ["Ankur"]
     steps:      
       - name: Checkout code
         uses: actions/checkout@v4
