--- a/.github/workflows/reusable-workflow.yaml
+++ b/.github/workflows/reusable-workflow.yaml
@@ -6,13 +6,16 @@ on:
       name:
         description: 'This is the name of the user'
         required: true
+        type: string
       
       age:
         description: 'This signifes the age of the user'
+        type: number
         
       message:
         description: 'This is how to greet the user'
         default: "Hello"
+        type: string
 
 jobs:
   welcome-job:
@@ -24,7 +27,8 @@ jobs:
         shell: bash
 
   wish-happy-birthday-job:
-
+    runs-on: ubuntu-latest
+    
     steps:
       - name: Say hello
         run: echo "${{ inputs.message }}! You are most welcome to the team, ${{ inputs.name }}"
