--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -51,18 +51,23 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        working-directory: ./terraform
       
       - name: Terraform Validate
         run: terraform validate
+        working-directory: ./terraform
 
       - name: Terraform Plan
         run: terraform plan -out=tfplan
+        working-directory: ./terraform
       
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
+        working-directory: ./terraform
       
       - name: Terraform Output
         run: terraform output
+        working-directory: ./terraform
 
       - name: Deploy
         run: |
