--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -50,15 +50,11 @@ jobs:
           aws-region: us-east-1
 
       - name: Terraform Init
-        run: terraform init -reconfigure
+        run: terraform init
         working-directory: ./terraform
       
       - name: Terraform Validate
         run: terraform validate
-        working-directory: ./terraform
-
-      - name: Terraform Destroy
-        run: terraform destroy
         working-directory: ./terraform
 
       - name: Terraform Plan
