Manually destroy AWS resources 1

--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -3,6 +3,10 @@ name: Destroy AWS Resources
 on:
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+  
 jobs:
   delete_aws_resources:
     runs-on: ubuntu-latest
