--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -6,7 +6,7 @@ on:
 permissions:
   id-token: write
   contents: read
-  
+
 jobs:
   delete_aws_resources:
     runs-on: ubuntu-latest
@@ -37,5 +37,5 @@ jobs:
         working-directory: ./terraform
 
       - name: Terraform Destroy
-        run: terraform destroy
+        run: terraform destroy -lock=false -auto-approve
         working-directory: ./terraform
