--- a/.github/workflows/deploy_glue.yaml
+++ b/.github/workflows/deploy_glue.yaml
@@ -1,7 +1,9 @@
 name: Deploy Glue Job Action
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - master
 
 permissions:
   id-token: write
