Add Glue Script 3

--- a/.github/workflows/deploy_glue.yaml
+++ b/.github/workflows/deploy_glue.yaml
@@ -29,13 +29,17 @@ jobs:
       
       - name: Terraform Init
         run: terraform init
+        working-directory: ./terraform
       
       - name: Terraform Validate
         run: terraform validate
+        working-directory: ./terraform
 
       - name: Terraform Plan
         run: terraform plan -out=tfplan
+        working-directory: ./terraform
       
       - name: Terraform Apply
         run: terraform apply
+        working-directory: ./terraform
 
