--- a/.github/workflows/deploy_glue.yaml
+++ b/.github/workflows/deploy_glue.yaml
@@ -40,6 +40,6 @@ jobs:
         working-directory: ./terraform
       
       - name: Terraform Apply
-        run: terraform apply
+        run: terraform apply -auto-approve
         working-directory: ./terraform
 
